--- a/myapp/lib/src/main/resources/templates/index.mustache
+++ b/myapp/lib/src/main/resources/templates/index.mustache
@@ -2,8 +2,15 @@
 <h1>Web Service with Starting Spring Boot Ver.2</h1>
 <div class="col-md-12">
 	<div class="row">
-		<div class="col=md-6">
-			<a href="/posts/save" role="button" class="btn btn-primarty">Write</a>
+		<div class="col-md-6">
+			<a href="/posts/save" role="button" class="btn btn-primary">Write</a>
+			{{#userName}}
+			Logged in as : <span id="user">{{userName}}</span>
+			<a href="/logout" class="btn btn-info active" role="button">Logout</a>
+			{{/userName}}
+			{{^userName}}
+				<a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
+			{{/userName}}
 		</div>
 	</div>
 	<table class="table table-horizontal table-bordered">
